# esp32s3-lvgl-terminal.idf

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml
SquareLine_Project/: SquareLine_Project.sll  SquareLine_Project.spj
components/adc_set/: CMakeLists.txt  adc_set.c
components/adc_set/include/: adc_set.h
components/data_set/: CMakeLists.txt  data_set.c
components/data_set/include/: data_set.h
components/key_set/: CMakeLists.txt  key_set.c
components/key_set/include/: key_set.h
components/lcd_set/: CMakeLists.txt  lcd_set.c
components/lcd_set/include/: lcd_set.h
components/lvgl_set/: CMakeLists.txt  lvgl_set.c
components/lvgl_set/include/: lvgl_set.h
components/music_set/: CMakeLists.txt  music_set.c
components/music_set/include/: music_set.h
components/rgb_set/: CMakeLists.txt  rgb_set.c
components/rgb_set/include/: rgb_set.h
components/task_set/: CMakeLists.txt  task_set.c
components/task_set/include/: task_set.h
components/timer_set/: CMakeLists.txt  timer_set.c
components/timer_set/include/: timer_set.h
components/touch_set/: CMakeLists.txt  touch_set.c
components/uart_set/: CMakeLists.txt  uart_set.c
components/ui_set/: CMakeLists.txt  ui_set.c
components/ui_set/include/: ui_set.h
components/wifi_set/: CMakeLists.txt  wifi_set.c
components/xiaozhi_set/: CMakeLists.txt  xiaozhi_set.c
components/xiaozhi_set/include/: xiaozhi_set.h
hardware/: BOM_PCB_基于ESP32S3的智能终端V2.0.xlsx
main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: flash.bat  get_ports.ps1
(+54 files in other folders)
